[project]
name = "general-agent-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tihanst", email = "109627164+tihanst@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-together>=0.4.0",
    "langgraph>=1.2.4",
    "matplotlib>=3.11.0",
    "pydantic-settings>=2.14.1",
    "tavily-python>=0.7.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/general_agent_orchestrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
general-agent-orchestrator = "general_agent_orchestrator.main:main"
