[project]
name = "react-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "tihanst", email = "109627164+tihanst@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-together>=0.4.0",
    "langgraph>=1.2.4",
    "matplotlib>=3.11.0",
    "opentelemetry-api>=1.43.0,<2",
    "opentelemetry-exporter-otlp>=1.43.0,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0,<2",
    "opentelemetry-sdk>=1.43.0,<2",
    "pydantic-settings>=2.14.1",
    "tavily-python>=0.7.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/react_orchestrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
react-orchestrator = "react_orchestrator.main:main"
